; ModuleID = '/home/carl/AnghaBench/h2o/deps/picotls/t/extr_picotls.c_on_update_traffic_key.c'
source_filename = "/home/carl/AnghaBench/h2o/deps/picotls/t/extr_picotls.c_on_update_traffic_key.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i64 }

@zeroes_of_max_digest_size = common dso_local global i32 0, align 4
@PTLS_MAX_DIGEST_SIZE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i32, i64, i8*)* @on_update_traffic_key to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @on_update_traffic_key(i32* %0, i32* %1, i32 %2, i64 %3, i8* %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i64, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i32***, align 8
  %12 = alloca i64, align 8
  store i32* %0, i32** %6, align 8
  store i32* %1, i32** %7, align 8
  store i32 %2, i32* %8, align 4
  store i64 %3, i64* %9, align 8
  store i8* %4, i8** %10, align 8
  %13 = load i32*, i32** %7, align 8
  %14 = call i32**** @ptls_get_data_ptr(i32* %13)
  %15 = load i32***, i32**** %14, align 8
  store i32*** %15, i32**** %11, align 8
  %16 = load i32***, i32**** %11, align 8
  %17 = load i32**, i32*** %16, align 8
  %18 = load i32, i32* %8, align 4
  %19 = sext i32 %18 to i64
  %20 = getelementptr inbounds i32*, i32** %17, i64 %19
  %21 = load i32*, i32** %20, align 8
  %22 = load i64, i64* %9, align 8
  %23 = getelementptr inbounds i32, i32* %21, i64 %22
  %24 = load i32, i32* %23, align 4
  %25 = load i32, i32* @zeroes_of_max_digest_size, align 4
  %26 = load i32, i32* @PTLS_MAX_DIGEST_SIZE, align 4
  %27 = call i64 @memcmp(i32 %24, i32 %25, i32 %26)
  %28 = icmp eq i64 %27, 0
  %29 = zext i1 %28 to i32
  %30 = call i32 @ok(i32 %29)
  %31 = load i32*, i32** %7, align 8
  %32 = call %struct.TYPE_4__* @ptls_get_cipher(i32* %31)
  %33 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %32, i32 0, i32 0
  %34 = load %struct.TYPE_3__*, %struct.TYPE_3__** %33, align 8
  %35 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %34, i32 0, i32 0
  %36 = load i64, i64* %35, align 8
  store i64 %36, i64* %12, align 8
  %37 = load i32***, i32**** %11, align 8
  %38 = load i32**, i32*** %37, align 8
  %39 = load i32, i32* %8, align 4
  %40 = sext i32 %39 to i64
  %41 = getelementptr inbounds i32*, i32** %38, i64 %40
  %42 = load i32*, i32** %41, align 8
  %43 = load i64, i64* %9, align 8
  %44 = getelementptr inbounds i32, i32* %42, i64 %43
  %45 = load i32, i32* %44, align 4
  %46 = load i8*, i8** %10, align 8
  %47 = load i64, i64* %12, align 8
  %48 = call i32 @memcpy(i32 %45, i8* %46, i64 %47)
  ret i32 0
}

declare dso_local i32**** @ptls_get_data_ptr(i32*) #1

declare dso_local i32 @ok(i32) #1

declare dso_local i64 @memcmp(i32, i32, i32) #1

declare dso_local %struct.TYPE_4__* @ptls_get_cipher(i32*) #1

declare dso_local i32 @memcpy(i32, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
